package jobs4u.base.entitymanagement.dto;

public class CustomerDTO {
    private String costumerCode;

    public String costumerCode(){
        return this.costumerCode;
    }
}
