package jobs4u.base.notificationmanagement;

import java.io.Serializable;

public class NotificationDTO implements Serializable {

    private static final long serialVersionUID = 1L;

}
