@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222



'SHARED VALUE OBJETS

    class Address <<(V,#FF8B40) value object>> {}

 class FullClassName <<(V,#FF8B40) value object>> {}
'SERVICES
    class RequirementEvaluator <<(S,#4d91f7) service>> {}
    class InterviewEvaluator <<(S,#4d91f7) service>> {}

package "<<aggregate>> Interview Model" {
    entity InterviewModel <<entity>> <<root>>  {}
    class InterviewModelName <<(V,#FF8B40) value object>> <<identifier>> {}
    class InterviewModelDescription <<(V,#FF8B40) value object>> {}

}

package "<<aggregate>> Customer" {
    entity Customer <<entity>> <<root>>  {}
    class CustomerCode <<(V,#FF8B40) value object>> <<identifier>> {}
    class CompanyName <<(V,#FF8B40) value object>> {}
}

package "<<aggregate>> Requirement Specification" {
    entity RequirementSpecification <<entity>> <<root>>  {}
    class RequirementName <<(V,#FF8B40) value object>> <<identifier>> {}
    class RequirementDescription <<(V,#FF8B40) value object>> {}
}
'AGGREGATES
package "<<aggregate>> Job Opening" {
    entity JobOpening <<entity>> <<root>> {}
    class JobFunction <<(V,#FF8B40) value object>> {}
    class JobOpeningStatus <<(V,#FF8B40) value object>> {}
    class ContractType <<(V,#FF8B40) value object>> {}
    class Mode <<(V,#FF8B40) value object>> {}
    class NumberVacancy <<(V,#FF8B40) value object>> {}
       class Description <<(V,#FF8B40) value object>> {}
     class JobReference <<(V,#FF8B40) value object>> <<identifier>> {}

}

package "<<aggregate>> Notification" {
    entity Notification <<entity>> <<root>> {}
    class NotificationBody <<(V,#FF8B40) value object>>{}
    class NotificationType <<(V,#FF8B40) value object>>{}
    class NotificationRecipient <<(V,#FF8B40) value object>>{}
    class NotificationStatus <<(V,#FF8B40) value object>>{}
    class NotificationDate <<(V,#FF8B40) value object>>{}
}

note "<size:28>This entity isn't yet confirmed</size>" as N2
Notification .. N2



package "<<aggregate>> Application" {
    entity Application <<entity>><<root>>  {}
    class ApplicationDate <<(V,#FF8B40) value object>> {}
    class ApplicationStatus <<(V,#FF8B40) value object>> {}
    class Interview <<(V,#FF8B40) value object>>   {}
    class InterviewAnswer <<(V,#FF8B40) value object>>   {}
    class InterviewResult <<(V,#FF8B40) value object>>   {}
    class Justification <<(V,#FF8B40) value object>>   {}
    class InterviewGrade <<(V,#FF8B40) value object>>   {}
    class RequirementAnswer <<(V,#FF8B40) value object>>   {}
    class RequirementResult <<(V,#FF8B40) value object>>   {}
    class InterviewAnswer <<(V,#FF8B40) value object>>   {}
    class Schedule <<(V,#FF8B40) value object>> {}
     class File <<(V,#FF8B40) value object>> {}
}

package "<<aggregate>> Recruitment Process" {
    entity RecruitmentProcess <<entity>> <<root>> {}
    class RecruitmentPeriod <<(V,#FF8B40) value object>> {}
    entity Phase <<entity>> {}
    class PhasePeriod <<(V,#FF8B40) value object>> {}
    class PhaseDescription <<(V,#FF8B40) value object>> {}
    class PhaseType <<(V,#FF8B40) value object>> {}
    class PhaseStatus <<(V,#FF8B40) value object>> {}
}


'ASSOCIATIONS
Customer --> "1..*" JobOpening : sends
Customer --> "1" CompanyName : is described by
Customer --> "1" Address : is located at
Customer --> "1" CustomerCode : is identified by
'--
JobOpening ---> "1"  JobReference : includes
JobOpening --> "1"  Mode : includes
JobOpening --> "1"  NumberVacancy : includes
JobOpening ---> "1"  Address : includes
JobOpening --> "1"  JobFunction : includes
JobOpening ---> "1"  Description : includes
JobOpening ---> "1"  ContractType : includes
JobOpening --> "1" JobOpeningStatus : classified by
JobOpening ---> "1"  RequirementSpecification : includes
JobOpening -> "1"  InterviewModel : includes
JobOpening --> "1"  RecruitmentProcess : includes
JobOpening --> "1"  Application : associated to <
'--
RecruitmentProcess --> "1" RecruitmentPeriod : goes on for
RecruitmentProcess ---> "5..6" Phase : encompasses
'--
Phase --> "1" PhasePeriod :  goes on for
Phase --> "1" PhaseType : categorizes <
Phase --> "1" PhaseStatus : categorizes <
Phase --> "1" PhaseDescription : describes <
'--
Application ---> "0..1" Interview : includes
Application --> "1" RequirementAnswer : includes
Application ---> "1" RequirementResult : includes
Application ---> "1..*" File : describes <
Application ---> "1" ApplicationDate : registered by
Application --> "1" ApplicationStatus : categorizes <
'--
RequirementEvaluator .--> Application
RequirementEvaluator .-> RequirementSpecification
'--
InterviewEvaluator .-> Application
InterviewEvaluator .--> InterviewModel
'--
Interview ---> "1" InterviewAnswer: described in
Interview ---> "1" InterviewResult: classifies <
InterviewResult -> "1" InterviewGrade: grades <
InterviewResult --> "1" Justification: justifies <
Interview --> "1" Schedule : follows a
'--
InterviewModel --> "1" InterviewModelName: identifies <
InterviewModel --> "1" InterviewModelDescription: describes <
InterviewModel --> "1" FullClassName: configures <
'--
RequirementSpecification --> "1" RequirementName: identifies <
RequirementSpecification --> "1" RequirementDescription: describes <
RequirementSpecification --> "1" FullClassName: configures <
'__
Notification ---> NotificationBody : has
Notification --> NotificationRecipient : has
Notification --> NotificationStatus : has
Notification ---> NotificationDate : has
Notification -> NotificationType : has
'__
Notification --> "1" Customer : notifies
@enduml